zokrates_cli/examples/compile_errors/constant_reduction_fail.zok
from "EMBED" import bit_array_le;

const bool CONST = bit_array_le([true], [true]);

def main() -> bool {
    return CONST;
}
